--- a/css/anyconference.css
+++ b/css/anyconference.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'SourceSansPro';
-  src: url("../font/SourceSansPro-Regular.ttf") format('truetype');
-}
-
 #content {
     position: absolute;
     top: 4rem;
@@ -48,7 +43,7 @@
   border-radius: 6px;
 }
 .topcoat-navigation-bar__title {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   text-shadow: 0px 1px 0px #fff;
 }
@@ -84,7 +79,7 @@
   content: "UP NEXT";
   line-height: 2rem;
   font-size: 2rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: 100;
   padding: 0.07rem 0.7rem;
   color: #fff;
@@ -116,7 +111,7 @@
   min-height: 8rem;
   padding: 1rem;
   background: #fff;
-  border: 1px solid #e2b6cc;
+  border: 1px solid #8497a4;
 }
 .topcoat-card:after {
   display: block;
@@ -128,7 +123,7 @@
   content: '';
   width: 98%;
   height: 10px;
-  border-top: 1px solid #c69;
+  border-top: 1px solid #71818c;
 }
 .topcoat-card-content {
   display: table-cell;
@@ -255,10 +250,10 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #c69;
+  background: #71818c;
   font-weight: normal;
   font-size: 2.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   list-style: none;
 }
@@ -269,7 +264,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #e9bcd2;
+  background: #bbc0da;
   border-top: none;
 }
 .anyconf-list-label {
@@ -318,7 +313,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-date {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 2rem;
@@ -326,7 +321,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-location {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 1.5rem;
@@ -341,7 +336,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-underline {
   width: 140px;
-  background: #c69;
+  background: #71818c;
   border: none;
   margin: 0 auto;
   height: 3px;
@@ -357,7 +352,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   line-height: 3.5rem;
   font-size: 3.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: normal;
   text-transform: uppercase;
   text-align: center;
@@ -394,7 +389,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   top: 0px;
 }
 .anyconf-condensed {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   font-size: 1.5rem;
   color: #333;
@@ -410,7 +405,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #c69;
+  color: #71818c;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -470,7 +465,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 .topcoat-overlay h1 {
   margin: 0;
   color: #fff;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   border-bottom: none;
   font-size: 1.5rem;
   font-weight: normal;
@@ -627,7 +622,7 @@ body {
   border-radius: 6px;
 }
 .topcoat-navigation-bar__title {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   text-shadow: 0px 1px 0px #fff;
 }
@@ -663,7 +658,7 @@ body {
   content: "UP NEXT";
   line-height: 2rem;
   font-size: 2rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: 100;
   padding: 0.07rem 0.7rem;
   color: #fff;
@@ -695,7 +690,7 @@ body {
   min-height: 8rem;
   padding: 1rem;
   background: #fff;
-  border: 1px solid #e2b6cc;
+  border: 1px solid #8497a4;
 }
 .topcoat-card:after {
   display: block;
@@ -707,7 +702,7 @@ body {
   content: '';
   width: 98%;
   height: 10px;
-  border-top: 1px solid #c69;
+  border-top: 1px solid #71818c;
 }
 .topcoat-card-content {
   display: table-cell;
@@ -833,10 +828,10 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #c69;
+  background: #71818c;
   font-weight: normal;
   font-size: 2.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   list-style: none;
 }
@@ -847,7 +842,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #e9bcd2;
+  background: #bbc0da;
   border-top: none;
 }
 .anyconf-list-label {
@@ -891,7 +886,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-date {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 2rem;
@@ -899,7 +894,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-location {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 1.5rem;
@@ -914,7 +909,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-underline {
   width: 140px;
-  background: #c69;
+  background: #71818c;
   border: none;
   margin: 0 auto;
   height: 3px;
@@ -930,7 +925,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   line-height: 3.5rem;
   font-size: 3.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: normal;
   text-transform: uppercase;
   text-align: center;
@@ -967,7 +962,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   top: 0px;
 }
 .anyconf-condensed {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   font-size: 1.5rem;
   color: #333;
@@ -983,7 +978,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #c69;
+  color: #71818c;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -1042,7 +1037,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 .topcoat-overlay h1 {
   margin: 0;
   color: #fff;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   border-bottom: none;
   font-size: 1.5rem;
   font-weight: normal;
@@ -1078,7 +1073,7 @@ limitations under the License.
   border-radius: 6px;
 }
 .topcoat-navigation-bar__title {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   text-shadow: 0px 1px 0px #fff;
 }
@@ -1114,7 +1109,7 @@ limitations under the License.
   content: "UP NEXT";
   line-height: 2rem;
   font-size: 2rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: 100;
   padding: 0.07rem 0.7rem;
   color: #fff;
@@ -1146,7 +1141,7 @@ limitations under the License.
   min-height: 8rem;
   padding: 1rem;
   background: #fff;
-  border: 1px solid #e2b6cc;
+  border: 1px solid #8497a4;
 }
 .topcoat-card:after {
   display: block;
@@ -1158,7 +1153,7 @@ limitations under the License.
   content: '';
   width: 98%;
   height: 10px;
-  border-top: 1px solid #c69;
+  border-top: 1px solid #71818c;
 }
 .topcoat-card-content {
   display: table-cell;
@@ -1284,10 +1279,10 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #c69;
+  background: #71818c;
   font-weight: normal;
   font-size: 2.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   list-style: none;
 }
@@ -1298,7 +1293,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #e9bcd2;
+  background: #bbc0da;
   border-top: none;
 }
 .anyconf-list-label {
@@ -1342,7 +1337,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-date {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 2rem;
@@ -1350,7 +1345,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-location {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 1.5rem;
@@ -1365,7 +1360,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-underline {
   width: 140px;
-  background: #c69;
+  background: #71818c;
   border: none;
   margin: 0 auto;
   height: 3px;
@@ -1381,7 +1376,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   line-height: 3.5rem;
   font-size: 3.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: normal;
   text-transform: uppercase;
   text-align: center;
@@ -1418,7 +1413,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   top: 0px;
 }
 .anyconf-condensed {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   font-size: 1.5rem;
   color: #333;
@@ -1434,7 +1429,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #c69;
+  color: #71818c;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -1493,7 +1488,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 .topcoat-overlay h1 {
   margin: 0;
   color: #fff;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   border-bottom: none;
   font-size: 1.5rem;
   font-weight: normal;
@@ -2295,7 +2290,7 @@ limitations under the License.
   border-radius: 6px;
 }
 .topcoat-navigation-bar__title {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   text-shadow: 0px 1px 0px #fff;
   
@@ -2334,7 +2329,7 @@ limitations under the License.
   content: "UP NEXT";
   line-height: 2rem;
   font-size: 2rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: 100;
   padding: 0.07rem 0.7rem;
   color: #fff;
@@ -2366,7 +2361,7 @@ limitations under the License.
   min-height: 8rem;
   padding: 1rem;
   background: #fff;
-  border: 1px solid #e2b6cc;
+  border: 1px solid #8497a4;
 }
 .topcoat-card:after {
   display: block;
@@ -2378,7 +2373,7 @@ limitations under the License.
   content: '';
   width: 98%;
   height: 10px;
-  border-top: 1px solid #c69;
+  border-top: 1px solid #71818c;
 }
 .topcoat-card-content {
   display: table-cell;
@@ -2504,10 +2499,10 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #c69;
+  background: #71818c;
   font-weight: normal;
   font-size: 2.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   list-style: none;
 }
@@ -2518,7 +2513,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #e9bcd2;
+  background: #bbc0da;
   border-top: none;
 }
 .anyconf-list-label {
@@ -2562,7 +2557,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-date {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 2rem;
@@ -2570,7 +2565,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-label-location {
   margin: 0;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-align: center;
   font-weight: normal;
   font-size: 1.5rem;
@@ -2585,7 +2580,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 }
 .anyconf-underline {
   width: 140px;
-  background: #c69;
+  background: #71818c;
   border: none;
   margin: 0 auto;
   height: 3px;
@@ -2601,7 +2596,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   line-height: 3.5rem;
   font-size: 3.5rem;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   font-weight: normal;
   text-transform: uppercase;
   text-align: center;
@@ -2638,7 +2633,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   top: 0px;
 }
 .anyconf-condensed {
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   text-transform: uppercase;
   font-size: 1.5rem;
   color: #333;
@@ -2654,7 +2649,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #c69;
+  color: #71818c;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -2713,7 +2708,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 .topcoat-overlay h1 {
   margin: 0;
   color: #fff;
-  font-family: 'league-gothic', 'SourceSansPro';
+  font-family: Helvetica;
   border-bottom: none;
   font-size: 1.5rem;
   font-weight: normal;
@@ -2982,7 +2977,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
     margin: 0 auto;
 
     background-image: url('../img/event-logo.png');
-    background-size: 100%;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
