--- a/css/anyconference.css
+++ b/css/anyconference.css
@@ -250,7 +250,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #71818c;
+  background: #209dc2;
   font-weight: normal;
   font-size: 2.5rem;
   font-family: Helvetica;
@@ -264,7 +264,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #209dc2;
+  background: #9dd4e4;
   border-top: none;
 }
 .anyconf-list-label {
@@ -405,7 +405,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #209dc2;
+  color: #9dd4e4;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -828,7 +828,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #71818c;
+  background: #209dc2;
   font-weight: normal;
   font-size: 2.5rem;
   font-family: Helvetica;
@@ -842,7 +842,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #209dc2;
+  background: #9dd4e4;
   border-top: none;
 }
 .anyconf-list-label {
@@ -978,7 +978,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #209dc2;
+  color: #9dd4e4;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -1279,7 +1279,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #71818c;
+  background: #209dc2;
   font-weight: normal;
   font-size: 2.5rem;
   font-family: Helvetica;
@@ -1293,7 +1293,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #209dc2;
+  background: #9dd4e4;
   border-top: none;
 }
 .anyconf-list-label {
@@ -1429,7 +1429,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #209dc2;
+  color: #9dd4e4;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -2518,7 +2518,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin: 0;
   padding: 0;
   color: #fff;
-  background: #71818c;
+  background: #209dc2;
   font-weight: normal;
   font-size: 2.5rem;
   font-family: Helvetica;
@@ -2532,7 +2532,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   padding: 0;
   font-size: 1rem;
   font-weight: 400;
-  background: #209dc2;
+  background: #9dd4e4;
   border-top: none;
 }
 .anyconf-list-label {
@@ -2668,7 +2668,7 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
   margin-top: 0.5rem;
 }
 .anyconf-link {
-  color: #209dc2;
+  color: #9dd4e4;
 }
 .anyconf-link--twitter:before {
   display: inline-block;
@@ -2992,9 +2992,9 @@ input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-
 
 .anyconf-event-logo {
     position: absolute;
-    bottom: 1em;
+    bottom: 2em;
     width: 100%;
-    height: 200px;
+    height: 180px;
     margin: 0 auto;
 
     background-image: url('../img/event-logo.png');
